[tool.poetry]
name = "lab-dice"
version = "0.1.0"
description = ""
authors = ["Chris Proctor <chris@chrisproctor.net>"]
readme = "README.md"
packages = [{include = "lab_dice"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.6"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
